# lila-gif

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  REAMDE.md  lichess-deploy.sh  lila-gif.service  lila-gif.socket  make-theme.py
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  test.yml
src/: api.rs  assets.rs  main.rs  render.rs  svg_theme.rs  theme.rs
src/renderer/: gif_renderer.rs  mod.rs  renderer.rs  svg_renderer.rs
theme/: README.md  make-sprite.py  make-sprites.py  make-theme.py  requirements.txt  test-themes.py
theme/piece/: LICENSE.txt
