[package]
name = "lila-gif"
version = "1.0.0"
publish = false
description = "Webservice to render gifs of chess positions and games"
repository = "https://github.com/lichess-org/lila-gif"
readme = "README.md"
license = "AGPL-3.0+"
authors = ["Niklas Fiekas <niklas.fiekas@backscattering.de>"]
categories = ["games", "multimedia"]
keywords = ["chess", "gif", "lichess"]
edition = "2021"

[dependencies]
axum = "0.8.0-rc.1"
tokio = { version = "1", features = ["full"] }
rusttype = "0.9"
serde = { version = "1.0", features = ["derive"] }
shakmaty = "0.27"
serde_with = "3"
ndarray = "0.16"
bytes = "1"
arrayvec = { version = "0.7", features = ["serde"] }
clap = { version = "4", features = ["derive", "deprecated"] }
gift = "0.10"
futures = "0.3"
tikv-jemallocator = { version = "0.6", features = ["unprefixed_malloc_on_supported_platforms"] }
listenfd = "1"

[profile.release]
lto = true
